<?xml version="1.0" encoding="utf-8"?>
<com.doit.activity.socialutils.view.HeadZoomScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/re_mine_topbg"
                android:layout_width="match_parent"
                android:layout_height="220dp">

            <ImageView
                    android:background="@mipmap/notification_bg_normal_pressed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/img_tipbg"/>

            <com.doit.activity.socialutils.view.WebImageView
                    android:id="@+id/img_head"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"/>

            <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_head"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="鼬子"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/linear_sview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/top_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#006781"
                        android:gravity="center"
                        android:orientation="horizontal">


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="我"
                            android:textColor="@color/white"
                            android:textSize="20sp"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/text_weather"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableRight="@mipmap/pic_next"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/text_weather"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2.0px"
                    android:background="@color/light_gray"/>

            <TextView
                    android:id="@+id/text_video"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableRight="@mipmap/pic_next"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/text_video"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2.0px"
                    android:background="@color/light_gray"/>

            <TextView
                    android:id="@+id/text_food"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableRight="@mipmap/pic_next"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/text_food"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2.0px"
                    android:background="@color/light_gray"/>

            <TextView
                    android:id="@+id/text_ali_video"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableRight="@mipmap/pic_next"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/text_ali_video"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2.0px"
                    android:background="@color/light_gray"/>


        </LinearLayout>
    </LinearLayout>


</com.doit.activity.socialutils.view.HeadZoomScrollView>