<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="#fbfcfb"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/img_food_detail_head"
                        android:layout_width="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"/>
                <TextView
                        android:layout_below="@+id/img_food_detail_head"
                        android:layout_margin="15dp"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_food_detail_title"/>

                <TextView

                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="@dimen/height_45"
                        android:background="@mipmap/jz_back_normal"
                        android:onClick="backOnClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>


            <LinearLayout
                    android:id="@+id/linear_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:orientation="horizontal">

                <TextView
                        android:textSize="14sp"
                        android:textColor="@color/food_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_food_detail_author"/>
                <TextView
                        android:textSize="14sp"
                        android:textColor="@color/food_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_food_detail_col_count"/>
                <TextView
                        android:textSize="14sp"
                        android:textColor="@color/food_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_food_detail_bro_count"/>
            </LinearLayout>

            <!--食物元素含量分析 -->
            <LinearLayout
                    android:id="@+id/li_food_label"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <View
                        android:layout_width="match_parent"
                        android:layout_height="2.0px"
                        android:layout_margin="15dp"
                        android:background="@color/light_gray"/>

                <LinearLayout
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/linear_label">
                </LinearLayout>
                <LinearLayout
                        android:background="@color/white"
                        android:padding="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                            android:layout_gravity="center_horizontal"
                            android:textSize="18sp"
                            android:textColor="@color/food_green_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_fits"/>
                    <com.doit.activity.socialutils.view.RadarView
                            android:id="@+id/rv_food"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="265dp"
                            android:layout_height="215dp"/>
                    <RelativeLayout
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                    >
                        <com.doit.activity.socialutils.view.MyProgressBar
                                android:id="@+id/pb_kll"
                                android:focusable="false"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="40dp"
                                app:innerBackground="@color/food_red_all"
                                app:outerBackground="@color/food_red"
                                android:layout_width="95dp"
                                android:layout_height="95dp"/>
                        <com.doit.activity.socialutils.view.MyProgressBar
                                android:id="@+id/pb_dbz"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="40dp"
                                android:focusable="false"
                                app:innerBackground="@color/food_blue_all"
                                app:outerBackground="@color/food_blue"
                                android:layout_width="95dp"
                                android:layout_height="95dp"/>

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/linear_food_des"
                    android:visibility="gone"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:id="@+id/text_food_rate"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:layout_width="0.0dp"
                        android:drawableTop="@mipmap/recipe_detail_sz"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <TextView
                        android:id="@+id/text_food_type"
                        android:gravity="center"
                        android:layout_width="0.0dp"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/recipe_detail_time"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <TextView
                        android:id="@+id/text_food_taste"
                        android:layout_width="0.0dp"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/recipe_detail_wd"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <TextView
                        android:id="@+id/text_food_cooking_time"
                        android:layout_width="0.0dp"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:drawableTop="@mipmap/recipe_detailrl"
                        android:drawablePadding="5dp"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

            </LinearLayout>
            <TextView
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:lineSpacingExtra="5dp"
                    android:textSize="14sp"
                    android:singleLine="false"
                    android:textColor="@color/food_gray_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_food_summary"/>
            <TextView
                    android:textSize="13sp"
                    android:drawablePadding="2dp"
                    android:visibility="gone"
                    android:layout_marginStart="15dp"
                    android:drawableEnd="@mipmap/recipe_detail_desc_all"
                    android:text="@string/food_bro_more"
                    android:textColor="@color/food_gray_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_food_more"/>


            <LinearLayout
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/food_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_marginStart="5dp"
                        android:textSize="13sp"
                        android:textColor="@color/food_gray_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_main"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1.0px"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/light_gray"/>
            <LinearLayout
                    android:id="@+id/linear_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_margin="15dp"
                        android:text="@string/food_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:textSize="13sp"
                        android:textColor="@color/light_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_second"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1.0px"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/light_gray"/>
            <LinearLayout
                    android:id="@+id/linear_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            <TextView
                    android:textSize="13sp"
                    android:drawablePadding="2dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:drawableEnd="@mipmap/recipe_detail_desc_all"
                    android:text="@string/food_ingredient_more"
                    android:textColor="@color/food_gray_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_45"
                    android:id="@+id/text_ingredient_more"/>
            <LinearLayout
                    android:layout_marginTop="15dp"
                    android:id="@+id/linear_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            </LinearLayout>
            <TextView
                    android:textSize="16sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_cp"/>

            <LinearLayout
                    android:paddingBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                        android:scaleType="fitXY"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:id="@+id/img_small_pic"/>
                <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:id="@+id/hs_big_pic"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </HorizontalScrollView>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>